Complete Deep Sea Classified presentation
- Add encounter slide with creature animation
- Add video slide with fallback for missing video files
- Add analysis and escape slides
- Update workspace settings for optimal development
- Add comprehensive Claude.md documentation
- Enhance index page with mysterious animations
- All slides ready for GitHub Pages deployment

--- a/figma_intro_slide.html
+++ b/figma_intro_slide.html
@@ -299,6 +299,6 @@
     
     <!-- Side indicators -->
     <div class="depth-indicator">DESCENT INTO THE ABYSS</div>
-    <div class="presenter">Current Event Presentation<br>Your Name Here</div>
+    <div class="presenter">The Life Aquatic<br>Daniel Traynor</div>
 </body>
 </html>
