Fix slide navigation by removing target='_blank'
- Remove target='_blank' from all slide links to prevent popup blocking
- Links now open in same tab which is more reliable
- Add navigation back button to intro slide as example
- This should fix the clicking issue on GitHub Pages

Fixes:
- Popup blockers were preventing target='_blank' links from working
- Same-tab navigation is more reliable for presentations
- Added back navigation for better user experience

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         Dramatic opening with classified document styling. Sets the scene for the groundbreaking
                         discovery with animated sonar effects and mission parameters.
                     </p>
-                    <a href="figma_intro_slide.html" class="slide-link" target="_blank">ENTER BRIEFING →</a>
+                    <a href="figma_intro_slide.html" class="slide-link">ENTER BRIEFING →</a>
                 </div>
 
                 <div class="slide-card">
@@ -512,7 +512,7 @@
                         Interactive journey through ocean zones with animated depth gauge. Click to explore each zone
                         and discover where the colossal squid was found.
                     </p>
-                    <a href="figma_descent_slide.html" class="slide-link" target="_blank">BEGIN DESCENT →</a>
+                    <a href="figma_descent_slide.html" class="slide-link">BEGIN DESCENT →</a>
                 </div>
 
                 <div class="slide-card">
@@ -522,7 +522,7 @@
                         Dramatic first contact with the massive colossal squid. Experience the awe and tension of this
                         historic moment in deep-sea exploration.
                     </p>
-                    <a href="encounter_slide.html" class="slide-link" target="_blank">WITNESS ENCOUNTER →</a>
+                    <a href="encounter_slide.html" class="slide-link">WITNESS ENCOUNTER →</a>
                 </div>
 
                 <div class="slide-card">
@@ -532,7 +532,7 @@
                         Actual recorded footage of the giant squid encounter. Witness the unprecedented 46-meter
                         specimen in its natural habitat with real-time mission data overlays.
                     </p>
-                    <a href="video_encounter_slide.html" class="slide-link" target="_blank">VIEW FOOTAGE →</a>
+                    <a href="video_encounter_slide.html" class="slide-link">VIEW FOOTAGE →</a>
                 </div>
 
                 <div class="slide-card">
@@ -542,7 +542,7 @@
                         Scientific analysis and data collection from the encounter. Real-time specimen data, behavioral
                         patterns, and threat assessment.
                     </p>
-                    <a href="analysis_slide.html" class="slide-link" target="_blank">VIEW ANALYSIS →</a>
+                    <a href="analysis_slide.html" class="slide-link">VIEW ANALYSIS →</a>
                 </div>
 
                 <div class="slide-card">
@@ -552,7 +552,7 @@
                         Critical system failure forces immediate emergency surface ascent. Hull breach detected, oxygen
                         running low, and the creature gives chase.
                     </p>
-                    <a href="escape_slide.html" class="slide-link" target="_blank">INITIATE ESCAPE →</a>
+                    <a href="escape_slide.html" class="slide-link">INITIATE ESCAPE →</a>
                 </div>
             </div>
 
