Fix navigation: Use JavaScript navigation with fallbacks

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         Dramatic opening with classified document styling. Sets the scene for the groundbreaking
                         discovery with animated sonar effects and mission parameters.
                     </p>
-                    <a href="figma_intro_slide.html" class="slide-link">ENTER BRIEFING →</a>
+                    <a href="figma_intro_slide.html" class="slide-link" onclick="navigateToSlide('figma_intro_slide.html'); return false;">ENTER BRIEFING →</a>
                 </div>
 
                 <div class="slide-card">
@@ -512,7 +512,7 @@
                         Interactive journey through ocean zones with animated depth gauge. Click to explore each zone
                         and discover where the colossal squid was found.
                     </p>
-                    <a href="figma_descent_slide.html" class="slide-link">BEGIN DESCENT →</a>
+                    <a href="figma_descent_slide.html" class="slide-link" onclick="navigateToSlide('figma_descent_slide.html'); return false;">BEGIN DESCENT →</a>
                 </div>
 
                 <div class="slide-card">
@@ -522,7 +522,7 @@
                         Dramatic first contact with the massive colossal squid. Experience the awe and tension of this
                         historic moment in deep-sea exploration.
                     </p>
-                    <a href="encounter_slide.html" class="slide-link">WITNESS ENCOUNTER →</a>
+                    <a href="encounter_slide.html" class="slide-link" onclick="navigateToSlide('encounter_slide.html'); return false;">WITNESS ENCOUNTER →</a>
                 </div>
 
                 <div class="slide-card">
@@ -532,7 +532,7 @@
                         Actual recorded footage of the giant squid encounter. Witness the unprecedented 46-meter
                         specimen in its natural habitat with real-time mission data overlays.
                     </p>
-                    <a href="video_encounter_slide.html" class="slide-link">VIEW FOOTAGE →</a>
+                    <a href="video_encounter_slide.html" class="slide-link" onclick="navigateToSlide('video_encounter_slide.html'); return false;">VIEW FOOTAGE →</a>
                 </div>
 
                 <div class="slide-card">
@@ -542,7 +542,7 @@
                         Scientific analysis and data collection from the encounter. Real-time specimen data, behavioral
                         patterns, and threat assessment.
                     </p>
-                    <a href="analysis_slide.html" class="slide-link">VIEW ANALYSIS →</a>
+                    <a href="analysis_slide.html" class="slide-link" onclick="navigateToSlide('analysis_slide.html'); return false;">VIEW ANALYSIS →</a>
                 </div>
 
                 <div class="slide-card">
@@ -552,7 +552,7 @@
                         Critical system failure forces immediate emergency surface ascent. Hull breach detected, oxygen
                         running low, and the creature gives chase.
                     </p>
-                    <a href="escape_slide.html" class="slide-link">INITIATE ESCAPE →</a>
+                    <a href="escape_slide.html" class="slide-link" onclick="navigateToSlide('escape_slide.html'); return false;">INITIATE ESCAPE →</a>
                 </div>
             </div>
 
@@ -636,8 +636,8 @@
                 animation: slideDown 0.5s ease-out;
             `;
                 warning.innerHTML = `
-                <strong>⚠️ FILE PROTOCOL DETECTED</strong> - 
-                Links may not work properly. Please serve via HTTP: 
+                <strong>⚠️ FILE PROTOCOL DETECTED</strong> -
+                Links may not work properly. Please serve via HTTP:
                 <code style="background: rgba(0,0,0,0.3); padding: 2px 6px; border-radius: 3px;">python3 -m http.server 8000</code>
                 <button onclick="this.parentElement.style.display='none'" style="
                     background: rgba(255,255,255,0.2);
@@ -663,6 +663,40 @@
 
                 // Push content down
                 document.body.style.paddingTop = '70px';
+            }
+
+            // Add click logging
+            document.querySelectorAll('.slide-link').forEach(link => {
+                link.addEventListener('click', (e) => {
+                    console.log('Slide link clicked:', link.href);
+                    console.log('Protocol:', window.location.protocol);
+                    console.log('Attempting navigation to:', link.getAttribute('href'));
+                    // Don't prevent default, just log
+                });
+            });
+
+            // Navigation function with multiple fallback methods
+            function navigateToSlide(slideFile) {
+                console.log('navigateToSlide called with:', slideFile);
+                console.log('Current location:', window.location.href);
+                console.log('Protocol:', window.location.protocol);
+                
+                try {
+                    // Method 1: Try window.location.href (most reliable)
+                    console.log('Attempting navigation with window.location.href');
+                    window.location.href = slideFile;
+                } catch (error) {
+                    console.error('Navigation failed:', error);
+                    
+                    // Method 2: Fallback to window.open in same window
+                    try {
+                        console.log('Fallback: Using window.open');
+                        window.open(slideFile, '_self');
+                    } catch (error2) {
+                        console.error('Fallback navigation failed:', error2);
+                        alert('Navigation failed. Please try opening the slide directly: ' + slideFile);
+                    }
+                }
             }
         </script>
     </body>
