Final cleanup: minimal descriptions, clean footer with class attribution

--- a/index.html
+++ b/index.html
@@ -414,10 +414,6 @@
                     grid-template-columns: 1fr;
                 }
 
-                .controls-grid {
-                    grid-template-columns: 1fr;
-                }
-
                 .container {
                     padding: 20px 15px;
                 }
@@ -451,8 +447,7 @@
                     <div class="slide-number">SLIDE 01</div>
                     <h2 class="slide-title">🔒 CLASSIFIED INTRO</h2>
                     <p class="slide-description">
-                        Dramatic opening with classified document styling. Sets the scene for the groundbreaking
-                        discovery with animated sonar effects and mission parameters.
+                        Mission briefing and classified parameters.
                     </p>
                     <a href="figma_intro_slide.html" class="slide-link"
                         onclick="navigateToSlide('figma_intro_slide.html'); return false;">ENTER BRIEFING →</a>
@@ -462,8 +457,7 @@
                     <div class="slide-number">SLIDE 02</div>
                     <h2 class="slide-title">🌊 OCEAN DESCENT</h2>
                     <p class="slide-description">
-                        Interactive journey through ocean zones with animated depth gauge. Click to explore each zone
-                        and discover where the colossal squid was found.
+                        Interactive journey through ocean zones.
                     </p>
                     <a href="figma_descent_slide.html" class="slide-link"
                         onclick="navigateToSlide('figma_descent_slide.html'); return false;">BEGIN DESCENT →</a>
@@ -473,8 +467,7 @@
                     <div class="slide-number">SLIDE 03</div>
                     <h2 class="slide-title">🦑 FIRST ENCOUNTER</h2>
                     <p class="slide-description">
-                        Dramatic first contact with the massive colossal squid. Experience the awe and tension of this
-                        historic moment in deep-sea exploration.
+                        First contact with specimen.
                     </p>
                     <a href="encounter_slide.html" class="slide-link"
                         onclick="navigateToSlide('encounter_slide.html'); return false;">WITNESS ENCOUNTER →</a>
@@ -484,8 +477,7 @@
                     <div class="slide-number">SLIDE 04</div>
                     <h2 class="slide-title">🎥 CLASSIFIED FOOTAGE</h2>
                     <p class="slide-description">
-                        Actual recorded footage of the giant squid encounter. Witness the unprecedented 46-meter
-                        specimen in its natural habitat with real-time mission data overlays.
+                        Recorded footage of encounter.
                     </p>
                     <a href="video_encounter_slide.html" class="slide-link"
                         onclick="navigateToSlide('video_encounter_slide.html'); return false;">VIEW FOOTAGE →</a>
@@ -495,8 +487,7 @@
                     <div class="slide-number">SLIDE 05</div>
                     <h2 class="slide-title">🔬 BIOLOGICAL ANALYSIS</h2>
                     <p class="slide-description">
-                        Scientific analysis and data collection from the encounter. Real-time specimen data, behavioral
-                        patterns, and threat assessment.
+                        Scientific analysis and threat assessment.
                     </p>
                     <a href="analysis_slide.html" class="slide-link"
                         onclick="navigateToSlide('analysis_slide.html'); return false;">VIEW ANALYSIS →</a>
@@ -506,8 +497,7 @@
                     <div class="slide-number">SLIDE 06</div>
                     <h2 class="slide-title">⚠️ EMERGENCY ASCENT</h2>
                     <p class="slide-description">
-                        Critical system failure forces immediate emergency surface ascent. Hull breach detected, oxygen
-                        running low, and the creature gives chase.
+                        Hull breach protocol activated.
                     </p>
                     <a href="escape_slide.html" class="slide-link"
                         onclick="navigateToSlide('escape_slide.html'); return false;">INITIATE ESCAPE →</a>
@@ -515,14 +505,8 @@
             </div>
 
             <div class="footer">
-                <p>
-                    <a href="https://github.com/yourusername/deep-sea-discovery-presentation" class="github-link">
-                        📂 View on GitHub
-                    </a>
-                </p>
                 <p class="tech-info">
-                    Built with HTML5, CSS3, JavaScript • No frameworks required<br>
-                    Optimized for Chrome/Firefox • Works on any device
+                    Made for Life Aquatic by Daniel Traynor
                 </p>
             </div>
         </div>
