--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                         rgba(0, 229, 255, 0.05),
                         transparent);
                 transition: left 0.8s ease;
+                pointer-events: none;
             }
 
             .slide-card::after {
@@ -290,6 +291,7 @@
                         transparent 70%);
                 opacity: 0;
                 transition: opacity 0.4s ease;
+                pointer-events: none;
             }
 
             .slide-card:hover::before {
