Add giant squid video with Git LFS and update presentation slides
- Configure Git LFS to track MP4 files
- Updated video_encounter_slide.html to use giantsquid.mp4
- Added research vessels slide with fleet overview
- Added supporting images (falkortoo.jpg, rov.jpg)
- Updated index.html with new slide navigation
- Added actual giant squid footage via Git LFS (giantsquid.mp4)

--- a/index.html
+++ b/index.html
@@ -445,6 +445,14 @@
             </div>
 
             <div class="slides-grid">
+<div class="slide-card">
+    <div class="slide-number">SLIDE 00</div>
+    <h2 class="slide-title">🚢 RESEARCH VESSELS</h2>
+    <p class="slide-description">
+        Fleet overview and journey to ROV drop site.
+    </p>
+    <a href="research_vessels_slide.html" class="slide-link">EXPLORE FLEET →</a>
+</div>
                 <div class="slide-card">
                     <div class="slide-number">SLIDE 01</div>
                     <h2 class="slide-title">🔒 CLASSIFIED INTRO</h2>
