--- a/research_vessels_slide.html
+++ b/research_vessels_slide.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Deep Sea Classified - Intro Slide</title>
+        <title>Deep Sea Discovery - Research Vessels</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=JetBrains+Mono:wght@300;400&display=swap');
 
@@ -102,7 +102,6 @@
             }
 
             @keyframes float {
-
                 0%,
                 100% {
                     transform: translateY(100vh) rotate(0deg);
@@ -122,40 +121,6 @@
                 }
             }
 
-            /* Sonar ping animation */
-            .sonar {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: 300px;
-                height: 300px;
-                border: 2px solid #00E5FF;
-                border-radius: 50%;
-                opacity: 0;
-                animation: sonarPing 4s ease-out infinite;
-            }
-
-            .sonar:nth-child(2) {
-                animation-delay: 1s;
-            }
-
-            .sonar:nth-child(3) {
-                animation-delay: 2s;
-            }
-
-            @keyframes sonarPing {
-                0% {
-                    transform: translate(-50%, -50%) scale(0);
-                    opacity: 1;
-                }
-
-                100% {
-                    transform: translate(-50%, -50%) scale(3);
-                    opacity: 0;
-                }
-            }
-
             /* Main content container */
             .container {
                 position: relative;
@@ -169,35 +134,6 @@
                 padding: 2rem;
             }
 
-            /* Classification header */
-            .classification {
-                position: absolute;
-                top: 2rem;
-                left: 50%;
-                transform: translateX(-50%);
-                background: rgba(255, 0, 0, 0.2);
-                color: #FF4444;
-                padding: 0.5rem 2rem;
-                border: 2px solid #FF4444;
-                font-family: 'JetBrains Mono', monospace;
-                font-size: 0.9rem;
-                letter-spacing: 2px;
-                animation: flicker 2s ease-in-out infinite alternate;
-            }
-
-            @keyframes flicker {
-
-                0%,
-                100% {
-                    opacity: 1;
-                }
-
-                50% {
-                    opacity: 0.7;
-                }
-            }
-
-            /* Main title */
             .title {
                 font-size: 4.5rem;
                 font-weight: 900;
@@ -218,37 +154,20 @@
                 }
             }
 
-            /* Subtitle */
             .subtitle {
                 font-size: 1.8rem;
                 color: #81C784;
                 margin-bottom: 3rem;
                 font-family: 'JetBrains Mono', monospace;
                 letter-spacing: 3px;
-                opacity: 0;
-                animation: fadeInUp 2s ease-out 1s forwards;
             }
 
-            @keyframes fadeInUp {
-                from {
-                    opacity: 0;
-                    transform: translateY(30px);
-                }
-
-                to {
-                    opacity: 1;
-                    transform: translateY(0);
-                }
-            }
-
-            /* Mission details */
-            .mission-info {
+            .vessel-info {
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(2, 1fr);
                 gap: 2rem;
                 margin-bottom: 3rem;
-                opacity: 0;
-                animation: fadeInUp 2s ease-out 2s forwards;
+                width: 80%;
             }
 
             .info-box {
@@ -281,65 +200,12 @@
                 font-weight: 700;
             }
 
-            /* Bottom info */
-            .presenter {
-                position: absolute;
-                bottom: 2rem;
-                right: 2rem;
-                font-family: 'JetBrains Mono', monospace;
-                color: #81C784;
-                font-size: 0.9rem;
-                opacity: 0.7;
+            #three-canvas {
+                width: 80%;
+                height: 400px;
+                margin-bottom: 2rem;
             }
 
-            .depth-indicator {
-                position: absolute;
-                left: 2rem;
-                top: 50%;
-                transform: translateY(-50%);
-                writing-mode: vertical-rl;
-                font-family: 'JetBrains Mono', monospace;
-                color: #00E5FF;
-                font-size: 0.9rem;
-                letter-spacing: 2px;
-            }
-
-            /* Pulsing indicator */
-            .status-indicator {
-                position: absolute;
-                top: 2rem;
-                right: 2rem;
-                width: 12px;
-                height: 12px;
-                background: #00FF00;
-                border-radius: 50%;
-                animation: pulse 1.5s ease-in-out infinite;
-            }
-
-            @keyframes pulse {
-
-                0%,
-                100% {
-                    opacity: 1;
-                    transform: scale(1);
-                }
-
-                50% {
-                    opacity: 0.5;
-                    transform: scale(1.2);
-                }
-            }
-
-            .status-text {
-                position: absolute;
-                top: 2rem;
-                right: 4rem;
-                font-family: 'JetBrains Mono', monospace;
-                color: #00FF00;
-                font-size: 0.8rem;
-            }
-
-            /* Navigation button */
             .nav-back {
                 position: absolute;
                 bottom: 2rem;
@@ -375,14 +241,15 @@
                     font-size: 1.2rem;
                 }
 
-                .mission-info {
+                .vessel-info {
                     grid-template-columns: 1fr;
                     gap: 1rem;
+                    width: 100%;
                 }
 
-                .classification {
-                    font-size: 0.7rem;
-                    padding: 0.3rem 1rem;
+                #three-canvas {
+                    width: 100%;
+                    height: 300px;
                 }
             }
         </style>
@@ -402,43 +269,112 @@
             <div class="particle"></div>
         </div>
 
-        <!-- Sonar rings -->
-        <div class="sonar"></div>
-        <div class="sonar"></div>
-        <div class="sonar"></div>
-
-        <!-- Status indicators -->
-        <div class="classification">DEEP SEA CLASSIFIED</div>
-        <div class="status-text">LIVE</div>
-        <div class="status-indicator"></div>
-
         <!-- Main content -->
         <div class="container">
-            <h1 class="title">DEEP</h1>
-            <h2 class="subtitle">FIRST CONTACT: MARCH 9, 2025</h2>
+            <h1 class="title">RESEARCH VESSELS</h1>
+            <h2 class="subtitle">MISSION FLEET & JOURNEY SIMULATION</h2>
 
-            <div class="mission-info">
+            <div class="vessel-info">
                 <div class="info-box">
-                    <div class="info-label">Location</div>
-                    <div class="info-value">South Sandwich Islands</div>
+                    <div class="info-label">Primary Vessel</div>
+                    <div class="info-value">RV Deep Explorer - Length: 85m, Crew: 45, Max Speed: 15 knots</div>
                 </div>
                 <div class="info-box">
-                    <div class="info-label">Depth</div>
-                    <div class="info-value">surface entry point</div>
-                </div>
-                <div class="info-box">
-                    <div class="info-label">Status</div>
-                    <div class="info-value">BREAKTHROUGH</div>
+                    <div class="info-label">ROV Substation</div>
+                    <div class="info-value">Substation ROV - Depth Rating: 6000m, Equipped with HD Cameras and Sensors</div>
                 </div>
             </div>
+
+            <canvas id="three-canvas"></canvas>
         </div>
 
-        <!-- Side indicators -->
-        <div class="depth-indicator">DESCENT INTO THE ABYSS</div>
-        <div class="presenter">The Life Aquatic<br>Daniel Traynor</div>
-
         <!-- Navigation -->
-        <a href="index.html" class="nav-back">← BACK TO MISSION BRIEFING</a>
+        <a href="index.html" class="nav-back">← BACK TO INDEX</a>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+        <script>
+            // Three.js setup
+            const scene = new THREE.Scene();
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('three-canvas') });
+            renderer.setSize(window.innerWidth * 0.8, 400);
+
+            // Ocean plane
+            const oceanGeometry = new THREE.PlaneGeometry(100, 100);
+            const oceanMaterial = new THREE.MeshBasicMaterial({ color: 0x0A0E27, side: THREE.DoubleSide });
+            const ocean = new THREE.Mesh(oceanGeometry, oceanMaterial);
+            ocean.rotation.x = Math.PI / 2;
+            scene.add(ocean);
+
+            // Simple Vessel Model
+            const vesselGroup = new THREE.Group();
+            const hull = new THREE.Mesh(new THREE.CylinderGeometry(1, 1, 10, 32), new THREE.MeshBasicMaterial({ color: 0x0000FF }));
+            hull.rotation.z = Math.PI / 2;
+            const deck = new THREE.Mesh(new THREE.BoxGeometry(8, 2, 3), new THREE.MeshBasicMaterial({ color: 0xFFFFFF }));
+            deck.position.set(0, 1.5, 0);
+            vesselGroup.add(hull, deck);
+
+            // Simple ROV Model
+            const rovGroup = new THREE.Group();
+            const rovBody = new THREE.Mesh(new THREE.BoxGeometry(2, 2, 2), new THREE.MeshBasicMaterial({ color: 0xFFFF00 }));
+            const rovProp = new THREE.Mesh(new THREE.CylinderGeometry(0.5, 0.5, 1, 32), new THREE.MeshBasicMaterial({ color: 0x000000 }));
+            rovProp.position.set(0, -1.5, 0);
+            rovGroup.add(rovBody, rovProp);
+            rovGroup.position.set(15, 5, 0);
+
+            scene.add(vesselGroup, rovGroup);
+
+            // Path for simulation
+            const curve = new THREE.CatmullRomCurve3([
+                new THREE.Vector3(-20, 0, 0),
+                new THREE.Vector3(-10, 0, 5),
+                new THREE.Vector3(0, 0, 0),
+                new THREE.Vector3(10, 0, -5),
+                new THREE.Vector3(20, 0, 0)
+            ]);
+            const pathGeometry = new THREE.TubeGeometry(curve, 64, 0.1, 8, false);
+            const pathMaterial = new THREE.MeshBasicMaterial({ color: 0x00E5FF });
+            const path = new THREE.Mesh(pathGeometry, pathMaterial);
+            scene.add(path);
+
+            // Start and Drop markers
+            const startMarker = new THREE.Mesh(new THREE.SphereGeometry(0.5), new THREE.MeshBasicMaterial({ color: 0x00FF00 }));
+            startMarker.position.set(-20, 0.5, 0);
+            const dropMarker = new THREE.Mesh(new THREE.SphereGeometry(0.5), new THREE.MeshBasicMaterial({ color: 0xFF0000 }));
+            dropMarker.position.set(20, 0.5, 0);
+            scene.add(startMarker, dropMarker);
+
+            camera.position.set(0, 20, 30);
+            camera.lookAt(0, 0, 0);
+
+            // Lighting
+            const light = new THREE.AmbientLight(0xFFFFFF, 0.8);
+            scene.add(light);
+
+            let time = 0;
+            function animate() {
+                requestAnimationFrame(animate);
+
+                // Rotate models
+                vesselGroup.rotation.y += 0.01;
+                rovGroup.rotation.y += 0.01;
+
+                // Animate vessel along path
+                time = (time + 0.001) % 1;
+                const point = curve.getPoint(time);
+                vesselGroup.position.set(point.x, 0.1, point.z);
+
+                renderer.render(scene, camera);
+            }
+            animate();
+
+            // Resize handler
+            window.addEventListener('resize', () => {
+                camera.aspect = window.innerWidth / window.innerHeight;
+                camera.updateProjectionMatrix();
+                renderer.setSize(window.innerWidth * 0.8, 400);
+            });
+        </script>
     </body>
 
 </html>
