Update presentation content and documentation
- CLAUDE.md: Added addendum clarifying this is a personal presentation project
- video_encounter_slide.html: Updated size estimate from 46 meters to 1 foot for realism
- video_encounter_slide.html: Aligned coordinates to match South Sandwich Islands location (-57.75°S, -26.50°W)
- Ensured coordinate consistency across research vessels and video encounter slides
- Added project scope clarification to avoid over-engineering for non-existent users

--- a/figma_descent_slide.html
+++ b/figma_descent_slide.html
@@ -428,8 +428,8 @@
     
     <!-- Mystery statistic -->
     <div class="mystery-stat">
-        <div class="stat-number">600m</div>
-        <div class="stat-label">WHERE WE FOUND IT</div>
+        <div class="stat-number">687m</div>
+        <div class="stat-label">TARGETED DEPTH DESTINATION</div>
     </div>
     
     <script>
