--- a/video_encounter_slide.html
+++ b/video_encounter_slide.html
@@ -650,8 +650,8 @@
                         </div>
 
                         <div class="coordinates-overlay">
-                            LAT: -59.4263°S<br>
-                            LON: -27.0434°W<br>
+                            LAT: -57.75°S<br>
+                            LON: -26.50°W<br>
                             BEARING: 127°
                         </div>
 
@@ -683,7 +683,7 @@
                     </div>
                     <div class="data-card">
                         <div class="data-label">Size Estimate</div>
-                        <div class="data-value critical">46 meters</div>
+                        <div class="data-value critical">1 foot</div>
                     </div>
                     <div class="data-card">
                         <div class="data-label">Behavior</div>
