Create backup branch and prepare for additional changes
- Created 'backup-before-changes' branch as safety net
- Current state preserved before making further modifications
- Ready to proceed with additional presentation updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Deep Sea Discovery - Colossal Squid Presentation</title>
+        <title>Twilight Zone Discovery - Colossal Squid Presentation</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=JetBrains+Mono:wght@300;400&display=swap');
 
@@ -439,7 +439,7 @@
 
         <div class="container">
             <div class="header">
-                <h1 class="main-title">DEEP SEA DISCOVERY</h1>
+                <h1 class="main-title">A TWILIGHT ZONE DISCOVERY</h1>
                 <p class="subtitle">Interactive Presentation</p>
                 <p class="event-info">Colossal Squid: First Live Footage • March 9, 2025</p>
             </div>
